[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "reachpath"
version = "0.1.0"
description = "Relationship intelligence and sourced prospecting SaaS"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "langgraph>=0.2,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]

[project.scripts]
reachpath = "reachpath.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reachpath"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
